<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="st_Robot_Output" Id="{3ab0c0a3-049c-4d69-a146-d4ee2de7086e}">
    <Declaration><![CDATA[TYPE st_Robot_Output :
STRUCT
    fault : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>